--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
         "lazypipe": "1.0.2",
         "merge-stream": "2.0.0",
         "mini-css-extract-plugin": "1.3.4",
-        "postcss": "8.4.24",
         "postcss-loader": "4.0.4",
+        "prettier": "^3.6.2",
+        "prettier-plugin-twig-melody": "^0.4.6",
         "pretty": "2.0.0",
         "replace-in-file-webpack-plugin": "1.0.6",
         "rtlcss-webpack-plugin": "4.0.6",
